--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<link href='https://fonts.googleapis.com/css?family=Nunito:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
@@ -9,13 +10,13 @@
   </head>
   <body>
   	<div class="header">
-  		<h1>99 Bottles of Beer on the Wall</h1>
   	</div>
+  	<h1 id="title">99 Bottles of Beer on the Wall</h1>
 
   	<div class="container">
-  		<div class="well">
-  			<h3>Sing along!</h3>
-  			<p>Enter a number in the form below and we'll sing your song that many times</p>
+  		<div class="well" id="box">
+  			<h3>Sing &amp; Drink Along!</h3>
+  			<p>How many bottles of beer are on YOUR wall? Enter a number sing/drink along.</p>
   			<form id="numberForm">
   			<div class="form-group">
   				<label for="number">Enter a number:</label>
@@ -27,6 +28,8 @@
 
   		<div id="results">
   			<p>The number you entered: <span class="numberEntered"></span></p>
+  			<audio id="beer-open" src="sounds/beer-open.mp3" type="audio/mp3"></audio>    
+  			<div class="songDisplay"></div>
   		</div>
   	</div>
   </body>
