--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
   	<link href='https://fonts.googleapis.com/css?family=Nunito:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
@@ -16,7 +17,7 @@
   	<div class="container">
   		<div class="well" id="box">
   			<h3>Sing &amp; Drink Along!</h3>
-  			<p>How many bottles of beer are on YOUR wall? Enter a number sing/drink along.</p>
+  			<p>How many bottles of beer are on YOUR wall? Enter a number to sing/drink along.</p>
   			<form id="numberForm">
   			<div class="form-group">
   				<label for="number">Enter a number:</label>
@@ -28,6 +29,7 @@
 
   		<div id="results">
   			<p>The number you entered: <span class="numberEntered"></span></p>
+        <h4>Click on the song lines below to follow along:</h4>
   			<audio id="beer-open" src="sounds/beer-open.mp3" type="audio/mp3"></audio>    
   			<div class="songDisplay"></div>
   		</div>
